--- a/geoar/index.html
+++ b/geoar/index.html
@@ -10,10 +10,16 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 </head>
 
+
 <body style="margin: 0; overflow: hidden;">
   <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <a-box material="color: red" gps-entity-place="latitude: 35.3869808; longitude: 139.4278017;"
-      scale="30 30 30"></a-box>
+    <a-assets>
+      <a-asset-item id="camo-cafe" src="camo-cafe.gltf"></a-asset-item>
+    </a-assets>
+    <!--<a-box material="color: red" gps-entity-place="latitude: 35.3869808; longitude: 139.4278017;"
+      scale="30 30 30"></a-box>-->
+    <a-entity gltf-model="#camo-cafe" gps-entity-place="latitude: 35.3869808; longitude: 139.4278017;"
+      scale="1 1 1"></a-entity>
     <a-camera gps-camera="gpsMinDistance:10;" rotation-reader> </a-camera>
   </a-scene>
 </body>
