--- a/model-viewer/index.html
+++ b/model-viewer/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>camo cafe model viewer</title>
+  <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 
 <body>
-  <model-viewer alt="Monolith" src="camo-cafe.gltf" ios-src="Models/Monolith.usdz" poster="Images/Monolith.png"
-    shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer alt="camo-cafe" src="camo-cafe.gltf" ios-src="camo-cafe.usdz" poster="" shadow-intensity="1"
+    camera-controls auto-rotate ar>
   </model-viewer>
 </body>
 
