--- a/model-viewer/index.html
+++ b/model-viewer/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <model-viewer alt="camo-cafe" src="camo-cafe.gltf" ios-src="camo-cafe.usdz" poster="" shadow-intensity="1"
-    camera-controls auto-rotate ar>
+  <model-viewer alt="camo-cafe" src="camo-cafe.gltf" ios-src="camo-cafe.usdz" poster="thumbnail.png"
+    shadow-intensity="1" camera-controls auto-rotate ar>
   </model-viewer>
 </body>
 
