--- a/model-viewer/index.html
+++ b/model-viewer/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>camo cafe model viewer</title>
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
