--- a/location-based/index.html
+++ b/location-based/index.html
@@ -14,7 +14,7 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene vr-mode-ui="enabled: false" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
     <a-assets>
-      <a-asset-item id="camo-cafe" src="camo-cafe.gltf"></a-asset-item>
+      <a-asset-item id="camo-cafe" src="../models/camo-cafe.gltf"></a-asset-item>
     </a-assets>
     <!--<a-box material="color: red" gps-entity-place="latitude: 35.3869808; longitude: 139.4278017;"
       scale="30 30 30"></a-box>-->
