--- a/model-viewer/index.html
+++ b/model-viewer/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <model-viewer alt="camo-cafe" src="camo-cafe.gltf" ios-src="camo-cafe.usdz" poster="thumbnail.png"
+  <model-viewer alt="camo-cafe" src="../models/camo-cafe.gltf" ios-src="../models/camo-cafe.usdz" poster="thumbnail.png"
     shadow-intensity="1" camera-controls auto-rotate ar>
   </model-viewer>
 </body>
